--- a/config/database.yml
+++ b/config/database.yml
@@ -1,26 +1,10 @@
-# PostgreSQL. Versions 8.2 and up are supported.
-#
-# Install the pg driver:
-#   gem install pg
-# On OS X with Homebrew:
-#   gem install pg -- --with-pg-config=/usr/local/bin/pg_config
-# On OS X with MacPorts:
-#   gem install pg -- --with-pg-config=/opt/local/lib/postgresql84/bin/pg_config
-# On Windows:
-#   gem install pg
-#       Choose the win32 build.
-#       Install PostgreSQL and put its /bin directory on your path.
-#
-# Configure Using Gemfile
-# gem 'pg'
-#
+# Please read README.md
+
 development:
   adapter: postgresql
   encoding: unicode
   database: flow-share_development
   pool: 5
-  username: flow-share
-  password:
 
   # Connect on a TCP socket. Omitted by default since the client uses a
   # domain socket that doesn't need configuration. Windows does not have
@@ -43,18 +27,15 @@ development:
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
+
 test:
   adapter: postgresql
   encoding: unicode
-  database: flow-share_test
+  database: flow-share_test<%= ENV['TEST_ENV_NUMBER'] %>
   pool: 5
-  username: flow-share
-  password:
 
 production:
   adapter: postgresql
   encoding: unicode
   database: flow-share_production
   pool: 5
-  username: flow-share
-  password:
