--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "name": "flow-share",
 	"version": "0.0.1",
   "engines": {
-    "node": "v0.10.x"
+		"node": "0.10.x",
+		"npm": "1.3.x"
   },
 	"dependencies": {
     "bower": "1.2.x",
@@ -11,6 +12,6 @@
   },
 
   "scripts": {
-    "postinstall": "./node_modules/bower/bin/bower install"
+    "postinstall": "bower install"
   }
 }
