--- a/package.json
+++ b/package.json
@@ -2,8 +2,8 @@
   "name": "flow-share",
 	"version": "0.0.1",
   "engines": {
-		"node": "0.10.x",
-		"npm": "1.3.x"
+    "node": "v0.10.x",
+    "npm": "1.3.x"
   },
 	"dependencies": {
     "bower": "1.2.x",
@@ -12,6 +12,11 @@
   },
 
   "scripts": {
-    "postinstall": "bower install"
+    "postinstall": "./node_modules/bower/bin/bower install"
+  },
+
+  "repository": {
+    "type" : "git",
+    "url" : "http://github.com/wefika/flow-share.git"
   }
 }
