--- a/package.json
+++ b/package.json
@@ -6,9 +6,7 @@
     "npm": "1.3.x"
   },
 	"dependencies": {
-    "bower": "1.2.x",
-    "express": "*",
-    "logfmt": "*"
+    "bower": "1.2.x"
   },
 
   "scripts": {
