--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   },
 
   "scripts": {
-    "postinstall": "./node_modules/bower/bin/bower install"
+    "postinstall": "./node_modules/bower/bin/bower update"
   },
 
   "repository": {
